# ChemE_Calculations

./: .gitignore  .read_the_docs.yaml  .readthedocs.yaml  README.md  cubic_equations.py  diffusion_coefficents.py  diffusion_coefficients.py  diffusion_scenarios.py  heat_transfer_coefficents.py  heat_transfer_coefficients.py  non_steady_state_conduction.py  property_units.py  pyproject.toml  steady_state_conduction.py  test.py  units.py  utility.py
cheme_calculations/heat_transfer/: __init__.py  heat_exchangers.py  heat_transfer_coefficients.py  non_steady_state_conduction.py  phase_changes.py  radiation.py  steady_state_conduction.py  unit_types.py
cheme_calculations/mass_transfer/: __init__.py  diffusion_coefficients.py  diffusion_scenarios.py  non_steady_state_diffusion.py  steady_state_diffusion.py  unit_types.py
cheme_calculations/process_safety/: __init__.py  explosions.py  incident_evaluation.py  ventilation.py
cheme_calculations/reactions/: __init__.py  balance.py  reaction_parameters.py  reactor_design.py
cheme_calculations/thermodynamics/: __init__.py  cubic_equations.py
cheme_calculations/units/: __init__.py  _utility.py  fluids.py  heat_transfer.py  mass_transfer.py  property_units.py  reactions.py  simplifications.py  units.py
cheme_calculations/utility/: __init__.py  constants.py  dimensionless.py  equation_solving.py  (+4 more)
docs/: conf.py  index.rst
tests/: standard_values.py  test_equation_solving.py  test_heat_transfer.py  test_mass_transfer.py  test_unit_conversions.py  test_unit_deconstruction.py  test_unit_prefixes.py  test_units_operations.py
(+8 files in other folders)
