[tool.poetry]
name = "cheme_calculations"
version = "0.1.0"
description = "A collection of ways to calculate various things related to chemical engineering"
authors = ["jrenning"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
